tests/neg/i21625.alt5.scala
trait Foo[+L] {
  def test[F[_ >: L]]: Unit // error
}
