tests/neg/i21625.alt5.check
-- Error: tests/neg/i21625.alt5.scala:2:11 -----------------------------------------------------------------------------
2 |  def test[F[_ >: L]]: Unit // error
  |           ^^^^^^^^^
  |           covariant type L occurs in contravariant position in type [_$1 >: L] of type F
